--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,4 @@ Seguros
 The_Office/
 LangChain_Course/
 ecobici/data
-Football stats/in progress/password.py
-Football stats/password.py
+FootballStats/password.py
