--- a/MovieMatch/moviematch/frontend/package.json
+++ b/MovieMatch/moviematch/frontend/package.json
@@ -17,13 +17,20 @@
     "firebase": "^11.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "typescript": "^4.9.5",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13"
+    "@eslint/css": "^0.8.1",
+    "@eslint/js": "^9.28.0",
+    "@eslint/json": "^0.12.0",
+    "@types/better-sqlite3": "^7.6.13",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "typescript-eslint": "^8.33.1"
   },
   "scripts": {
     "start": "react-scripts start",
